[package]
name = "pallet-swap"
version = "0.1.0"
authors = ["eropvolf <eropvolf@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
fixed-point = { package = "substrate-fixed", git = "https://github.com/encointer/substrate-fixed", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
node-primitives = { path = "../../bin/node/primitives", default-features = false }
serde = { version = "1.0.106", optional = true }
sp-runtime = { version = "2.0.0", default-features = false }

[dev-dependencies]
assets = { package = "pallet-assets", path = "../assets" }
float-cmp = "0.8.0"
sp-core = { version = "2.0.0" }
sp-io = { version = "2.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"node-primitives/std",
	"serde/std",
	"sp-runtime/std",
]
