[package]
name = "pallet-assets-rpc"
version = "0.1.0"
authors = ["eropvolf <eropvolf@gmail.com>"]
edition = "2018"

[dependencies]
assets-rpc-runtime-api = { package = "pallet-assets-rpc-runtime-api", path = "./runtime-api" }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
jsonrpc-core = "14.0.5"
jsonrpc-core-client = "14.0.5"
jsonrpc-derive = "14.0.5"
sp-api = "2.0.0"
sp-runtime = "2.0.0"
sp-blockchain = "2.0.0"
