[package]
name = "pallet-convert-rpc"
version = "0.1.0"
authors = ["eropvolf <eropvolf@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
convert-rpc-runtime-api = { package = "pallet-convert-rpc-runtime-api", path = "./runtime-api" }
jsonrpc-core = "14.0.5"
jsonrpc-core-client = "14.0.5"
jsonrpc-derive = "14.0.5"
sp-api = "2.0.0-rc4"
sp-runtime = "2.0.0-rc4"
sp-blockchain = "2.0.0-rc4"
