[package]
name = "pallet-assets-rpc-runtime-api"
version = "0.1.0"
authors = ["eropvolf <eropvolf@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-api = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
]
